# lazy-readme

./: README.md  TestME.md  pyproject.toml
src/lazy_readme/: plugin.py
